--- a/스터디_2023/프로젝트/이마트24/main.html
+++ b/스터디_2023/프로젝트/이마트24/main.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <title>이마트24 - scss사용하기</title>
 </head>
 <body>
-    
+    <div class="hello"><h2>헬로월드~</h2></div>
 </body>
 </html>
