변수와 믹스인 파일 만들기

--- a/스터디_2023/프로젝트/이마트24/main.html
+++ b/스터디_2023/프로젝트/이마트24/main.html
@@ -533,43 +533,45 @@
         </main>
         <!-- //#container -->
         <footer id="footer">
-            <ul class="footer_link">
-                <li class="privacy"><a href="">개인정보 처리방침</a></li>
-                <li><a href="">이용약관</a></li>
-                <li><a href="">고객센터</a></li>
-                <li><a href="">CSR경영</a></li>
-                <li><a href="">사이트맵</a></li>
-            </ul>
-            <div class="family_site">
-                <button><span>패밀리사이트</span></button>
-                <div class="layer">
+            <div class="wrap">
+                <ul class="footer_link">
+                    <li class="privacy"><a href="">개인정보 처리방침</a></li>
+                    <li><a href="">이용약관</a></li>
+                    <li><a href="">고객센터</a></li>
+                    <li><a href="">CSR경영</a></li>
+                    <li><a href="">사이트맵</a></li>
+                </ul>
+                <div class="family_site">
+                    <button><span>패밀리사이트</span></button>
+                    <div class="layer">
+                        <ul>
+                            <li><a href="">신세계그룹</a></li>
+                            <li><a href="">신세계백화점</a></li>
+                            <li><a href="">이마트</a></li>
+                            <li><a href="">신세계인터내셔날</a></li>
+                            <li><a href="">신세계푸드</a></li>
+                            <li><a href="">신세계건설</a></li>
+                            <li><a href="">신세계I&C</a></li>
+                            <li><a href="">SCK컴퍼니</a></li>
+                            <li><a href="">조선호텔앤리조트</a></li>
+                            <li><a href="">신세계사이먼</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="footer_con">
+                    <span class="title">(주) 이마트24</span>
+                    <span class="text">대표이사 : 김장욱 / 사업자등록번호 : 105-86-92454<br>
+                        서울특별시 성동구 성수동 2가 281-4 푸조비즈타워 / 고객센터: 02-6916-1500 / Fax: 02-6916-1430<br>
+                        COPYRIGHT (C) EMART24.ALL RIGHT RESERVED</span>
+                </div>
+                <div class="sns_box">
                     <ul>
-                        <li><a href="">신세계그룹</a></li>
-                        <li><a href="">신세계백화점</a></li>
-                        <li><a href="">이마트</a></li>
-                        <li><a href="">신세계인터내셔날</a></li>
-                        <li><a href="">신세계푸드</a></li>
-                        <li><a href="">신세계건설</a></li>
-                        <li><a href="">신세계I&C</a></li>
-                        <li><a href="">SCK컴퍼니</a></li>
-                        <li><a href="">조선호텔앤리조트</a></li>
-                        <li><a href="">신세계사이먼</a></li>
+                        <li class="youtube"><a href="" target="_blank" title="새창" rel="noopener noreferrer"><span>유튜브 바로가기</span></a></li>
+                        <li class="insta"><a href="" target="_blank" title="새창" rel="noopener noreferrer"><span>인스타그램 바로가기</span></a></li>
+                        <li class="facebook"><a href="" target="_blank" title="새창" rel="noopener noreferrer"><span>페이스북 바로가기</span></a></li>
+                        <li class="tictok"><a href="" target="_blank" title="새창" rel="noopener noreferrer"><span>틱톡 바로가기</span></a></li>
                     </ul>
                 </div>
-            </div>
-            <div class="footer_con">
-                <span class="title">(주) 이마트24</span>
-                <span class="text">대표이사 : 김장욱 / 사업자등록번호 : 105-86-92454<br>
-                    서울특별시 성동구 성수동 2가 281-4 푸조비즈타워 / 고객센터: 02-6916-1500 / Fax: 02-6916-1430<br>
-                    COPYRIGHT (C) EMART24.ALL RIGHT RESERVED</span>
-            </div>
-            <div class="sns_box">
-                <ul>
-                    <li class="youtube"><a href="" target="_blank" title="새창" rel="noopener noreferrer"><span>유튜브 바로가기</span></a></li>
-                    <li class="insta"><a href="" target="_blank" title="새창" rel="noopener noreferrer"><span>인스타그램 바로가기</span></a></li>
-                    <li class="facebook"><a href="" target="_blank" title="새창" rel="noopener noreferrer"><span>페이스북 바로가기</span></a></li>
-                    <li class="tictok"><a href="" target="_blank" title="새창" rel="noopener noreferrer"><span>틱톡 바로가기</span></a></li>
-                </ul>
             </div>
         </footer>
     </div>
