--- a/스터디_2023/프로젝트/이마트24/main.html
+++ b/스터디_2023/프로젝트/이마트24/main.html
@@ -18,7 +18,13 @@
     <link rel="icon" href="/common/favicon.ico">
     <link rel="stylesheet" type="text/css" href="./css/defalut.css">
     <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <script src="./js/jquery-1.12.4.HS-20200709.min.js"></script>
+    <script src="./js/jquery.screen.min.js"></script>
+    <script src="./js/slick.min.custom.1.6.0.10.js"></script>
+    <script src="./js/slick.extensions.min.js"></script>
+    <script src="./js/main.js"></script>
     <title>이마트24 - scss사용하기</title>
+
 </head>
 <body id="main" class="main">
     <h1>이마트24</h1>
@@ -542,7 +548,7 @@
                     <li><a href="">사이트맵</a></li>
                 </ul>
                 <div class="family_site">
-                    <button><span>패밀리사이트</span></button>
+                    <button class="family_btn" title="패밀리사이트 열기"><span>패밀리사이트</span></button>
                     <div class="layer" >
                         <ul>
                             <li><a href="">신세계그룹</a></li>
