비주얼슬라이드

--- a/스터디_2023/프로젝트/이마트24/main.html
+++ b/스터디_2023/프로젝트/이마트24/main.html
@@ -116,45 +116,47 @@
         </header>
         <main id="container">
             <section class="visual">
-                <h2>비주얼 슬라이드</h2>
-                <div class="slide_list">
-                    <div class="slide_item" >
-                        <a href="">
-                            <span class="slide_pc" style="background-image:url(./images/visual01.png);">슬라이드 대체텍스트</span>    
-                            <span class="slide_m" style="background-image:url(./images/visual01_m.png);">슬라이드 대체텍스트</span>    
-                        </a>
+                <h2 class="skip">비주얼 슬라이드</h2>
+         
+                    <div class="slide_list">
+                        <div class="slide_item" >
+                            <a href="">
+                                <span class="slide_pc" style="background-image:url(./images/visual01.png);">슬라이드 대체텍스트</span>    
+                                <span class="slide_m" style="background-image:url(./images/visual01_m.png);">슬라이드 대체텍스트</span>    
+                            </a>
+                        </div>
+                        <div class="slide_item" >
+                            <a href="">
+                                <span class="slide_pc" style="background-image:url(./images/visual02.png);">슬라이드 대체텍스트</span>    
+                                <span class="slide_m" style="background-image:url(./images/visual02_m.png);">슬라이드 대체텍스트</span>    
+                            </a>
+                        </div>
+                        <div class="slide_item" >
+                            <a href="">
+                                <span class="slide_pc" style="background-image:url(./images/visual03.png);">슬라이드 대체텍스트</span>    
+                                <span class="slide_m" style="background-image:url(./images/visual03_m.png);">슬라이드 대체텍스트</span>    
+                            </a>
+                        </div>
+                        <div class="slide_item" >
+                            <a href="">
+                                <span class="slide_pc" style="background-image:url(./images/visual04.png);">슬라이드 대체텍스트</span>    
+                                <span class="slide_m" style="background-image:url(./images/visual04_m.png);">슬라이드 대체텍스트</span>    
+                            </a>
+                        </div>
                     </div>
-                    <div class="slide_item" >
-                        <a href="">
-                            <span class="slide_pc" style="background-image:url(./images/visual02.png);">슬라이드 대체텍스트</span>    
-                            <span class="slide_m" style="background-image:url(./images/visual02_m.png);">슬라이드 대체텍스트</span>    
-                        </a>
+                    <div class="slide_control">
+                        <div>
+                            <button type="button" class="auto">멈춤</button>
+                            <button type="button" class="prev">이전</button>
+                            <button type="button" class="next">다음</button>
+                        </div>
+                        <div class="">
+                            <span class="current"></span>
+                            <div class="progress"></div>
+                            <span class="total"></span>
+                        </div>
                     </div>
-                    <div class="slide_item" >
-                        <a href="">
-                            <span class="slide_pc" style="background-image:url(./images/visual03.png);">슬라이드 대체텍스트</span>    
-                            <span class="slide_m" style="background-image:url(./images/visual03_m.png);">슬라이드 대체텍스트</span>    
-                        </a>
-                    </div>
-                    <div class="slide_item" >
-                        <a href="">
-                            <span class="slide_pc" style="background-image:url(./images/visual04.png);">슬라이드 대체텍스트</span>    
-                            <span class="slide_m" style="background-image:url(./images/visual04_m.png);">슬라이드 대체텍스트</span>    
-                        </a>
-                    </div>
-                </div>
-                <div class="slide_control">
-                    <div>
-                        <button type="button" class="auto">멈춤</button>
-                        <button type="button" class="prev">이전</button>
-                        <button type="button" class="next">다음</button>
-                    </div>
-                    <div class="">
-                        <span class="current"></span>
-                        <div class="progress"></div>
-                        <span class="total"></span>
-                    </div>
-                </div>
+
             </section>
             <section class="event">
                 <!-- 슬라이드가 자동롤링이면 멈춤버튼이 있어야 접근성위배가 안된다고 들었는데? -->
