비주얼 컨트롤박스

--- a/스터디_2023/프로젝트/이마트24/main.html
+++ b/스터디_2023/프로젝트/이마트24/main.html
@@ -145,14 +145,19 @@
                         </div>
                     </div>
                     <div class="slide_control">
-                        <div>
+                        <div class="control_box">
                             <button type="button" class="auto">멈춤</button>
                             <button type="button" class="prev">이전</button>
                             <button type="button" class="next">다음</button>
                         </div>
-                        <div class="">
+                        <div class="count_box">
                             <span class="current"></span>
-                            <div class="progress"></div>
+                            <div class="progress">
+                                <div class="total_bar">
+                                    <div class="state_bar"></div>
+                                    <div class="thumbnail_box"></div>
+                                </div>
+                            </div>
                             <span class="total"></span>
                         </div>
                     </div>
