--- a/스터디_2023/프로젝트/이마트24/main.html
+++ b/스터디_2023/프로젝트/이마트24/main.html
@@ -143,6 +143,54 @@
                                 <span class="slide_m" style="background-image:url(./images/visual04_m.png);">슬라이드 대체텍스트</span>    
                             </a>
                         </div>
+                        <div class="slide_item" >
+                            <a href="">
+                                <span class="slide_pc" style="background-image:url(./images/visual01.png);">슬라이드 대체텍스트</span>    
+                                <span class="slide_m" style="background-image:url(./images/visual01_m.png);">슬라이드 대체텍스트</span>    
+                            </a>
+                        </div>
+                        <div class="slide_item" >
+                            <a href="">
+                                <span class="slide_pc" style="background-image:url(./images/visual02.png);">슬라이드 대체텍스트</span>    
+                                <span class="slide_m" style="background-image:url(./images/visual02_m.png);">슬라이드 대체텍스트</span>    
+                            </a>
+                        </div>
+                        <div class="slide_item" >
+                            <a href="">
+                                <span class="slide_pc" style="background-image:url(./images/visual03.png);">슬라이드 대체텍스트</span>    
+                                <span class="slide_m" style="background-image:url(./images/visual03_m.png);">슬라이드 대체텍스트</span>    
+                            </a>
+                        </div>
+                        <div class="slide_item" >
+                            <a href="">
+                                <span class="slide_pc" style="background-image:url(./images/visual04.png);">슬라이드 대체텍스트</span>    
+                                <span class="slide_m" style="background-image:url(./images/visual04_m.png);">슬라이드 대체텍스트</span>    
+                            </a>
+                        </div>
+                        <div class="slide_item" >
+                            <a href="">
+                                <span class="slide_pc" style="background-image:url(./images/visual01.png);">슬라이드 대체텍스트</span>    
+                                <span class="slide_m" style="background-image:url(./images/visual01_m.png);">슬라이드 대체텍스트</span>    
+                            </a>
+                        </div>
+                        <div class="slide_item" >
+                            <a href="">
+                                <span class="slide_pc" style="background-image:url(./images/visual02.png);">슬라이드 대체텍스트</span>    
+                                <span class="slide_m" style="background-image:url(./images/visual02_m.png);">슬라이드 대체텍스트</span>    
+                            </a>
+                        </div>
+                        <div class="slide_item" >
+                            <a href="">
+                                <span class="slide_pc" style="background-image:url(./images/visual03.png);">슬라이드 대체텍스트</span>    
+                                <span class="slide_m" style="background-image:url(./images/visual03_m.png);">슬라이드 대체텍스트</span>    
+                            </a>
+                        </div>
+                        <div class="slide_item" >
+                            <a href="">
+                                <span class="slide_pc" style="background-image:url(./images/visual04.png);">슬라이드 대체텍스트</span>    
+                                <span class="slide_m" style="background-image:url(./images/visual04_m.png);">슬라이드 대체텍스트</span>    
+                            </a>
+                        </div>
                     </div>
                     <div class="slide_control">
                         <div class="control_box">
@@ -167,12 +215,12 @@
                 <!-- 슬라이드가 자동롤링이면 멈춤버튼이 있어야 접근성위배가 안된다고 들었는데? -->
                 <div class="wrap">
                     <h2>2월 행사 상품</h2>
-                    <div class="event_tab">
+                    <div class="event_tab clearfix">
                         <div class="tab_menu">
                             <div class="tab_list">
-                                <div class="tab_item active"><button><span>1+1</span></button></div>
-                                <div class="tab_item"><button><span>2+1</span></button></div>
-                                <div class="tab_item"><button><span>신상품</span></button></div>
+                                <div class="tab_item active"><button type="button" class="tab_btn"><span>1+1</span></button></div>
+                                <div class="tab_item"><button type="button" class="tab_btn"><span>2+1</span></button></div>
+                                <div class="tab_item"><button type="button" class="tab_btn"><span>신상품</span></button></div>
                             </div>
                         </div>
                         <div class="tab_content active">
@@ -191,7 +239,7 @@
                                     <div class="slide_item">
                                         <a href="">
                                             <div class="category">1+1</div>
-                                            <div class="img_box"><img src="./images/item1.png" alt="빙그레)딸기타임200ml 이미지"></div>
+                                            <div class="img_box"><img src="./images/item2.png" alt="빙그레)딸기타임200ml 이미지"></div>
                                             <div class="text_box">
                                                 <h3 class="title">빙그레)딸기타임200ml</h3>
                                                 <span class="price">1,100 원</span>
@@ -201,7 +249,7 @@
                                     <div class="slide_item">
                                         <a href="">
                                             <div class="category">1+1</div>
-                                            <div class="img_box"><img src="./images/item1.png" alt="슈가)베이킹소다수주방세제540ml 이미지"></div>
+                                            <div class="img_box"><img src="./images/item3.png" alt="슈가)베이킹소다수주방세제540ml 이미지"></div>
                                             <div class="text_box">
                                                 <h3 class="title">슈가)베이킹소다수주방세제540ml</h3>
                                                 <span class="price">7,900 원</span>
@@ -211,7 +259,27 @@
                                     <div class="slide_item">
                                         <a href="">
                                             <div class="category">1+1</div>
-                                            <div class="img_box"><img src="./images/item1.png" alt="빙그레)딸기타임200ml 이미지"></div>
+                                            <div class="img_box"><img src="./images/item4.png" alt="빙그레)딸기타임200ml 이미지"></div>
+                                            <div class="text_box">
+                                                <h3 class="title">빙그레)딸기타임200ml</h3>
+                                                <span class="price">1,100 원</span>
+                                            </div>
+                                        </a>
+                                    </div>
+                                    <div class="slide_item">
+                                        <a href="">
+                                            <div class="category">1+1</div>
+                                            <div class="img_box"><img src="./images/item3.png" alt="슈가)베이킹소다수주방세제540ml 이미지"></div>
+                                            <div class="text_box">
+                                                <h3 class="title">슈가)베이킹소다수주방세제540ml</h3>
+                                                <span class="price">7,900 원</span>
+                                            </div>
+                                        </a>
+                                    </div>
+                                    <div class="slide_item">
+                                        <a href="">
+                                            <div class="category">1+1</div>
+                                            <div class="img_box"><img src="./images/item4.png" alt="빙그레)딸기타임200ml 이미지"></div>
                                             <div class="text_box">
                                                 <h3 class="title">빙그레)딸기타임200ml</h3>
                                                 <span class="price">1,100 원</span>
@@ -219,6 +287,7 @@
                                         </a>
                                     </div>
                                 </div>
+                                <div class="dots"></div>
                             </div>
                         </div>
                         <div class="tab_content">
@@ -265,6 +334,7 @@
                                         </a>
                                     </div>
                                 </div>
+                                <div class="dots"></div>
                             </div>
                         </div>
                         <div class="tab_content">
@@ -277,6 +347,16 @@
                                             <div class="text_box">
                                                 <h3 class="title">동원)친친오리지널소시지70g</h3>
                                                 <span class="price">1,900 원</span>
+                                            </div>
+                                        </a>
+                                    </div>
+                                    <div class="slide_item">
+                                        <a href="">
+                                            <div class="category">NEW</div>
+                                            <div class="img_box"><img src="./images/item4.png" alt="오든든)껍질없는간편한조각사과150g 이미지"></div>
+                                            <div class="text_box">
+                                                <h3 class="title">오든든)껍질없는간편한조각사과150g</h3>
+                                                <span class="price">2,500 원</span>
                                             </div>
                                         </a>
                                     </div>
@@ -311,6 +391,7 @@
                                         </a>
                                     </div>
                                 </div>
+                                <div class="dots"></div>
                             </div>
                         </div>
                     </div>
