--- a/스터디_2023/프로젝트/이마트24/main.html
+++ b/스터디_2023/프로젝트/이마트24/main.html
@@ -406,9 +406,9 @@
                     </div>
                     <div class="only_slide">
                         <div class="slide_list">
-                            <div class="slide_itme">
+                            <div class="slide_item">
                                 <a href="">
-                                    <div class="img_box" style="background-image: url(./images/only1.png);">아임이</div>
+                                    <div class="img_box"><span style="background-image: url(./images/only1.png);">아임이</span></div>
                                     <div class="text_box">
                                         <div class="item_logo"><img src="./images/only_logo1.png" alt="아임이로고"></div>
                                         <div class="title">아임이</div>
@@ -416,9 +416,9 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="slide_itme">
+                            <div class="slide_item">
                                 <a href="">
-                                    <div class="img_box" style="background-image: url(./images/only2.png);">Fresh Food</div>
+                                    <div class="img_box"><span style="background-image: url(./images/only2.png);">Fresh Food</span></div>
                                     <div class="text_box">
                                         <div class="item_logo"><img src="./images/only_logo2.png" alt="Fresh Food 로고"></div>
                                         <div class="title">Fresh Food</div>
@@ -426,9 +426,9 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="slide_itme">
+                            <div class="slide_item">
                                 <a href="">
-                                    <div class="img_box" style="background-image: url(./images/only3.png);">김토끼</div>
+                                    <div class="img_box"><span style="background-image: url(./images/only3.png);">김토끼</span></div>
                                     <div class="text_box">
                                         <div class="item_logo"><img src="./images/only_logo3.png" alt="김토끼 로고"></div>
                                         <div class="title">김토끼 스튜됴</div>
@@ -436,9 +436,9 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="slide_itme">
+                            <div class="slide_item">
                                 <a href="">
-                                    <div class="img_box" style="background-image: url(./images/only4.png);">점신</div>
+                                    <div class="img_box"><span style="background-image: url(./images/only4.png);">점신</span></div>
                                     <div class="text_box">
                                         <div class="item_logo"><img src="./images/only_logo4.png" alt="점신 로고"></div>
                                         <div class="title">점신</div>
